.dsv files to ignore. Delphi temp files

--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,4 @@ Visualizers/BigNumberVisualizers.delphilsp.json
 Tests/BigIntegers/BigIntegerDevelopmentTests.delphilsp.json
 Samples/MathConstants/BigMathConstants.delphilsp.json
 BigNumbers.delphilsp.json
+*.dsv
